# Espresso-v8

./: .dockerignore  .gitignore  BUILD.gn  Dockerfile.aarch64  Dockerfile.linux  Dockerfile.v8  Makefile  README.md  args.gn.aarch64  args.gn.aarch64.test  args.gn.arm  args.gn.armv7hf  args.gn.x64  azure-pipelines.yml  build-win-static.py  build-win.py  checkIfBuildNeeded.ps1  checkReleaseStatus.ps1  macOS-build-v8-2.ps1  macOS-build-v8-4.ps1  ubuntu-build-v8-1.ps1  ubuntu-build-v8-2.ps1  win-build-v8-1.ps1  win-build-v8-2.ps1  win-build-v8-3.ps1  win-build-v8-4.ps1
nuget/: v8-monolith.linux-redist.nuspec  v8-monolith.linux.nuspec  v8-monolith.macOS-redist.nuspec  v8-monolith.macOS.nuspec  v8-monolith.win-redist.nuspec  v8-monolith.win.nuspec  v8-monolith.win.props  v8-static.win.nuspec  v8-static.win.props  v8.linux-redist.nuspec  v8.linux.nuspec  v8.macOS-redist.nuspec  v8.macOS.nuspec  v8.nuspec  v8.redist.nuspec  v8.symbols.nuspec  v8.ubuntu-redist.nuspec  v8.ubuntu.nuspec  v8.win-redist.nuspec  v8.win-redist.props  v8.win-symbols.nuspec  v8.win-symbols.props  v8.win.nuspec  v8.win.props  v8.win.redist.nuspec  v8.win.symbols.nuspec
scripts/: checkReleaseStatus.ps1
scripts/linux/: linux-build-v8-1.ps1  linux-build-v8-2.ps1  linux-build-v8-3.ps1  linux-build-v8-4.ps1
scripts/linux-arm/: linux-arm-build-v8-2.ps1  linux-arm-build-v8-3.ps1
scripts/macOS/: macOS-build-v8-1.ps1  macOS-build-v8-2.ps1  macOS-build-v8-3.ps1  macOS-build-v8-4.ps1
scripts/ubuntu/: ubuntu-build-v8-2.ps1  (+2 more)
templates/: windows-build-steps.yml  windows-sh-build-steps.yml
(+6 files in other folders)
